--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<version>2.8.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId> junit </groupId>
+			<artifactId> junit </artifactId>
+			<version> 4.12 </version>
+		</dependency>
     </dependencies>
 	
 	<build>
