--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,23 @@
   <groupId>DDS16</groupId>
   <artifactId>TP1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <dependencies>
-  
-  <!-- JPA Persistence Dependencies -->
+
+    <!-- UI dependencies -->
+  	<dependency>
+  	    <groupId>com.sparkjava</groupId>
+  	    <artifactId>spark-core</artifactId>
+  	    <version>2.2</version>
+  	</dependency>
+
+  	<dependency>
+  	    <groupId>com.sparkjava</groupId>
+  	    <artifactId>spark-template-handlebars</artifactId>
+  	    <version>2.3</version>
+  	</dependency>
+    
+    <!-- JPA Persistence Dependencies -->
 		<dependency>
 			<groupId>org.uqbar-project</groupId>
 			<artifactId>jpa-java8-extras</artifactId>
@@ -19,48 +32,39 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.26</version>
 		</dependency>
-		
-		<!-- dependency test -->
-<!--
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
--->
+
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.8</version>
 		</dependency>
-  
-  
-  
-  
+
 		<dependency>
 			<groupId>org.uqbar-project</groupId>
 			<artifactId>arena-jface</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.9</version>
 		</dependency>
+
 		<dependency>
 			<groupId> junit </groupId>
 			<artifactId> junit </artifactId>
 			<version> 4.12 </version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-    </dependencies>
-	
+  </dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
