--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <dependencies>
-
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>23.2-jre</version>
+	</dependency>
     <!-- UI dependencies -->
   	<dependency>
   	    <groupId>com.sparkjava</groupId>
@@ -20,49 +24,49 @@
   	</dependency>
     
     <!-- JPA Persistence Dependencies -->
-		<dependency>
-			<groupId>org.uqbar-project</groupId>
-			<artifactId>jpa-java8-extras</artifactId>
-			<version>1.0-alpha-1</version>
-		</dependency>
+	<dependency>
+		<groupId>org.uqbar-project</groupId>
+		<artifactId>jpa-java8-extras</artifactId>
+		<version>1.0-alpha-1</version>
+	</dependency>
 
-		<!-- driver jdbc -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.26</version>
-		</dependency>
+	<!-- driver jdbc -->
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.26</version>
+	</dependency>
 
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.2.8</version>
-		</dependency>
+	<dependency>
+		<groupId>org.hsqldb</groupId>
+		<artifactId>hsqldb</artifactId>
+		<version>2.2.8</version>
+	</dependency>
 
-		<dependency>
-			<groupId>org.uqbar-project</groupId>
-			<artifactId>arena-jface</artifactId>
-			<version>3.6.1</version>
-		</dependency>
+	<dependency>
+		<groupId>org.uqbar-project</groupId>
+		<artifactId>arena-jface</artifactId>
+		<version>3.6.1</version>
+	</dependency>
 
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
-		</dependency>
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>2.9.9</version>
+	</dependency>
 
-		<dependency>
-			<groupId> junit </groupId>
-			<artifactId> junit </artifactId>
-			<version> 4.12 </version>
-		</dependency>
+	<dependency>
+		<groupId> junit </groupId>
+		<artifactId> junit </artifactId>
+		<version> 4.12 </version>
+	</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.0</version>
+	</dependency>
   </dependencies>
 
 	<build>
