--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 
   <dependencies>
 	<dependency>
+		<groupId>org.mongodb.morphia</groupId>
+		<artifactId>morphia</artifactId>
+		<version>1.0.1</version>
+	</dependency>
+
+	<dependency>
 		<groupId>com.google.guava</groupId>
 		<artifactId>guava</artifactId>
 		<version>23.2-jre</version>
@@ -41,18 +47,6 @@
 		<groupId>org.hsqldb</groupId>
 		<artifactId>hsqldb</artifactId>
 		<version>2.2.8</version>
-	</dependency>
-
-	<dependency>
-		<groupId>org.uqbar-project</groupId>
-		<artifactId>arena-jface</artifactId>
-		<version>3.6.1</version>
-	</dependency>
-
-	<dependency>
-		<groupId>joda-time</groupId>
-		<artifactId>joda-time</artifactId>
-		<version>2.9.9</version>
 	</dependency>
 
 	<dependency>
